# ChangeLog for virtual/cblas
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/cblas/ChangeLog,v 1.6 2010/01/11 10:56:05 ulm Exp $

  11 Aug 2013; Justin Lecher <jlec@gentoo.org> cblas-2.0.ebuild, metadata.xml:
  Drop obsolete USE dep for openblas, #478130

  25 Jul 2013; Sébastien Fabbro <bicatali@gentoo.org> cblas-2.0.ebuild:
  virtual/cblas: Adapted for new openblas

  19 Dec 2012; Denis Dupeyron <calchan@gentoo.org> cblas-2.0.ebuild:
  Only consider sci-libs/gsl as a valid cblas implementation if the
  cblas-external USE flag is not set. Update sci-libs/gsl version to 1.15-r3.

*cblas-2.0 (24 Nov 2010)

  24 Nov 2010; Sébastien Fabbro <bicatali@gentoo.org> +cblas-2.0.ebuild,
  +metadata.xml:
  Version bump

  11 Jan 2010; Ulrich Mueller <ulm@gentoo.org> cblas-1.0.ebuild:
  Set empty HOMEPAGE and LICENSE.

  15 Dec 2009; Jonathan Callen <abcd@gentoo.org> cblas-1.0.ebuild:
  Add prefix keywords (~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux
  ~ppc-macos ~x86-macos)

  09 Nov 2008; Raúl Porcel <armin76@gentoo.org> cblas-1.0.ebuild:
  ia64 stable

  02 Jan 2008; Raúl Porcel <armin76@gentoo.org> cblas-1.0.ebuild:
  Add ~ia64

  22 Oct 2007; Jeroen Roovers <jer@gentoo.org> cblas-1.0.ebuild:
  Stable for HPPA (USE=lapack).

*cblas-1.0 (10 Oct 2007)

  10 Oct 2007; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,
  +cblas-1.0.ebuild:
  New style virtual for cblas. Version number is abitrary.